# flutter_bim

./: .gitattributes  .gitignore  API_DESIGN.md  ARCHITECTURE.md  BIM_VIEWER_PLAN.md  CHANGELOG.md  IFCOPENSHELL_INTEGRATION.md  LICENSE  NEXT_STEPS.md  PHASE1_COMPLETE.md  PROGRESS.md  QUICK_START.md  README.md  SETUP_GUIDE.md  claude.md  flutter_rust_bridge.yaml  pubspec.yaml
.claude/: settings.local.json
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/bimviewer/bim_viewer/: MainActivity.kt
docs/: PACKAGE_MIGRATION_PLAN.md
example/: pubspec.yaml
example/assets/test/: sample_building.ifc  sample_electrical.ifc  sample_structural.ifc  viewer_screen_test.dart
example/lib/: home_screen.dart  main.dart
integration_test/: app_test.dart
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: flutter_bim.dart  home_screen.dart  main.dart
lib/core/bridge/: api.dart
lib/core/bridge/bim/: model.dart
lib/src/core/bridge/: api.dart  frb_generated.dart  frb_generated.io.dart  lib.dart
lib/src/core/bridge/bim/: entities.dart  geometry.dart  model.dart  model_registry.dart
lib/src/widgets/: bim_viewer.dart  drawing_overlay_manager.dart  element_tree.dart  grid_overlay.dart  map_view.dart  measurement_tools.dart  model_manager.dart  properties_panel.dart  section_plane_tools.dart  settings_screen.dart
rust/: Cargo.toml  build-android.sh
rust/src/: api.rs  frb_generated.rs  lib.rs
rust/src/bim/: entities.rs  geometry.rs  ifc_parser.rs  mod.rs  model.rs  model_registry.rs
rust/src/renderer/: camera.rs  gpu.rs  mod.rs  overlay.rs  pipeline.rs  scene.rs  vertex.rs
test/: sample_architectural.ifc  sample_mep.ifc  viewer_screen_test.dart  widget_test.dart
